# caffe

./: CMakeLists.txt
data/VOC0712/: create_data.sh  create_list.sh
examples/: 01-learning-lenet.ipynb  CMakeLists.txt
examples/FRCNN/: demo_frcnn_api.cpp
examples/MULTI_LABEL/: train_PA100K_GPU_resnet18.sh
examples/cifar10/: cifar10_quick_solver.prototxt  train_quick.sh
examples/cifar10/test_train_with_python_script/: ResNet-18-train_val.prototxt  cifar10_train_test.py  cifar10_train_with_normalization.py  cifar10_train_with_resnet18.py  cifar_test_using_python_script.prototxt  cifar_train_using_python_script.prototxt
examples/multi_label_PA100K/: solver.prototxt  solver_GPU.prototxt  solver_GPU_resnet18.prototxt  train_PA100K.sh  train_PA100K_GPU.sh  train_PA100K_GPU_resnet18.sh  train_val.prototxt  train_val_GPU.prototxt  train_val_GPU_resnet18.prototxt
examples/net_surgery/: survey.py
examples/ssd/: bbox.c  jh_draw_ssd_pvanet_comparison.py  jh_evaluate_mAP.py  jh_evaluate_mAP_SSD512.py  jh_evaluate_recall.py  jh_evaluate_recall_different_gt_sizes.py  jh_evaluate_recall_different_gt_sizes_SSD512.py  jh_evaluate_recall_different_keepTopK.py  jh_evaluate_recall_different_keepTopK_SSD512.py  setup.py  ssd_detect.py
scripts/PA-100K/: convert_image_and_multi_label_into_db.py  convert_image_and_multi_label_into_db_GPU.py  showBlobProto.py  showLMDB.py
src/api/FRCNN/: CMakeLists.txt
src/caffe/: data_reader.cpp
tools/: convert_multi_label_dataset.cpp
tools/PA-100K/: PA100K_test_MULTIL_LABEL_LMDB_INPUT.cpp
tools/extra/: plot_training_log.py.example
(+29 files in other folders)
